feat: history manager with map and node list
Without duplicates, remove method, O(1) operations. Combines hash map and linked list approaches.