@@ -11,36 +11,66 @@ import static org.junit.jupiter.api.Assertions.*;
 class InMemoryHistoryManagerTest {
 
     @Test
-    void addAndGet() {
-        InMemoryHistoryManager hm = new InMemoryHistoryManager(3);
+    void addAndGetAndRemove() {
+        InMemoryHistoryManager hm = new InMemoryHistoryManager(4);                 // new history manager
         assertTrue(hm.getHistory().isEmpty());
 
-        hm.add(new Task(123, "task 1", "0", TaskStatus.NEW));
+        hm.add(new Task(123, "task 1", "0", TaskStatus.NEW));                     // task # 0
         assertEquals(1, hm.getHistory().size());
-        assertEquals("task 1", hm.getHistory().get(0).getTitle());
+        assertEquals("task 1", hm.getHistory().getFirst().getTitle());
 
-        hm.add(new Epic(250, "epic 1", "1"));
+        hm.add(new Epic(250, "epic 1", "1"));                                     // task # 1
         assertEquals(2, hm.getHistory().size());
         assertEquals("task 1", hm.getHistory().get(0).getTitle());
         assertEquals("epic 1", hm.getHistory().get(1).getTitle());
 
-        hm.add(new Subtask(327, "subtask 1", "2", TaskStatus.IN_PROGRESS));
+        hm.add(new Subtask(327, "subtask 1", "2", TaskStatus.IN_PROGRESS));       // task # 2
         assertEquals(3, hm.getHistory().size());
         assertEquals("task 1", hm.getHistory().get(0).getTitle());
         assertEquals("epic 1", hm.getHistory().get(1).getTitle());
         assertEquals("subtask 1", hm.getHistory().get(2).getTitle());
 
-        hm.add(new Subtask(327, "subtask 1", "2", TaskStatus.IN_PROGRESS));
+        hm.add(new Subtask(327, "subtask 1", "2", TaskStatus.IN_PROGRESS));       // task # 2 - duplicate
         assertEquals(3, hm.getHistory().size());
-        assertEquals("1", hm.getHistory().get(0).getDescription());
-        assertEquals("2", hm.getHistory().get(1).getDescription());
+        assertEquals("0", hm.getHistory().get(0).getDescription());
+        assertEquals("1", hm.getHistory().get(1).getDescription());
         assertEquals("2", hm.getHistory().get(2).getDescription());
 
-        hm.add(new Subtask(958, "subtask 2", "3", TaskStatus.DONE));
-        assertEquals(3, hm.getHistory().size());
-        assertEquals("2", hm.getHistory().get(0).getDescription());
-        assertEquals("2", hm.getHistory().get(1).getDescription());
+        hm.add(new Subtask(958, "subtask 2", "3", TaskStatus.DONE));              // task # 3
+        assertEquals(4, hm.getHistory().size());
+        assertEquals("0", hm.getHistory().get(0).getDescription());
+        assertEquals("1", hm.getHistory().get(1).getDescription());
+        assertEquals("2", hm.getHistory().get(2).getDescription());
+        assertEquals("3", hm.getHistory().get(3).getDescription());
+
+        hm.add(new Subtask(327, "subtask 1", "2", TaskStatus.IN_PROGRESS));       // task # 2 - duplicate
+        assertEquals(4, hm.getHistory().size());
+        assertEquals("0", hm.getHistory().get(0).getDescription());
+        assertEquals("1", hm.getHistory().get(1).getDescription());
         assertEquals("3", hm.getHistory().get(2).getDescription());
+        assertEquals("2", hm.getHistory().get(3).getDescription());
+
+        hm.add(new Subtask(512, "subtask 3", "4", TaskStatus.IN_PROGRESS));       // task # 4 - oversize
+        assertEquals(4, hm.getHistory().size());
+        assertEquals("1", hm.getHistory().get(0).getDescription());
+        assertEquals("3", hm.getHistory().get(1).getDescription());
+        assertEquals("2", hm.getHistory().get(2).getDescription());
+        assertEquals("4", hm.getHistory().get(3).getDescription());
+
+        hm.remove(2);                                                             // nonexistent id
+        assertEquals(4, hm.getHistory().size());
+
+        hm.remove(327);                                                           // task # 2 is removed
+        assertEquals(3, hm.getHistory().size());
+        assertEquals("1", hm.getHistory().get(0).getDescription());
+        assertEquals("3", hm.getHistory().get(1).getDescription());
+        assertEquals("4", hm.getHistory().get(2).getDescription());
+
+        hm.remove(250);                                                           // task # 1 is removed
+        assertEquals(2, hm.getHistory().size());
+        assertEquals("3", hm.getHistory().get(0).getDescription());
+        assertEquals("4", hm.getHistory().get(1).getDescription());
+
     }
 
     @Test
@@ -48,7 +78,7 @@ class InMemoryHistoryManagerTest {
         try {
             InMemoryHistoryManager hm = new InMemoryHistoryManager(0);
         } catch (Exception e) {
-            assertEquals("Parameter 'historySize' cannot be less than 1", e.getMessage());
+            assertEquals("Size of history cannot be less than 1", e.getMessage());
         }
     }
 
